
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EOF ;
 int exit (int) ;
 int getopt (int,char**,char*) ;
 scalar_t__ optarg ;

void args(int argc, char *argv[])
    {
    int file;
    int a;
    if(a)
    while((a = getopt(argc, argv, "f")) != EOF) {
    switch(a) {
    case 'f':
    file = (int)optarg;
    break;
    default:
    exit(-1);
                                                   }
                                   }
                                                   }
