; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_9701.c_args.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_9701.c_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"f\00", align 1
@EOF = common dso_local global i32 0, align 4
@optarg = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @args(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %25

9:                                                ; preds = %2
  br label %10

10:                                               ; preds = %23, %9
  %11 = load i32, i32* %3, align 4
  %12 = load i8**, i8*** %4, align 8
  %13 = call i32 @getopt(i32 %11, i8** %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* @EOF, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %16, label %24

16:                                               ; preds = %10
  %17 = load i32, i32* %6, align 4
  switch i32 %17, label %21 [
    i32 102, label %18
  ]

18:                                               ; preds = %16
  %19 = load i64, i64* @optarg, align 8
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %5, align 4
  br label %23

21:                                               ; preds = %16
  %22 = call i32 @exit(i32 -1) #3
  unreachable

23:                                               ; preds = %18
  br label %10

24:                                               ; preds = %10
  br label %25

25:                                               ; preds = %24, %2
  ret void
}

declare dso_local i32 @getopt(i32, i8**, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
